<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background = "@drawable/grass"
    tools:context=".MainActivity"
    android:id="@+id/scrollView"
    android:paddingBottom="20dp"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:paddingBottom="50dp"
        >
        <TextView
            android:id="@+id/txtview1"
            android:text="@string/defult_result"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/dices"
            app:layout_constraintStart_toStartOf="@id/dices"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="20"
            />
        <TextView
            android:id="@+id/txtview2"
            android:text="@string/defult_result"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/dices"
            app:layout_constraintEnd_toEndOf="@id/dices"
            android:textAlignment="center"
            android:layout_marginStart="10sp"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="20"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dices"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="20"
            />

        <TextView
            android:id="@+id/lastresults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/roll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/lastresults"
            android:textSize="30sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="20"
            />

        <TextView
            android:id="@+id/lastresult1"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lastresults"
            app:layout_constraintStart_toStartOf="@id/dices"
            android:text="@string/history_defult1"
            android:textSize="25sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/lastresult2"
            android:text="@string/history_defult2"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/lastresults"
            app:layout_constraintEnd_toEndOf="@id/dices"
            android:textAlignment="center"
            android:layout_marginStart="10sp"

            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dices">

            <ImageView
                android:src="@drawable/red_1"
                android:id="@+id/image1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="10dp"
                />

            <ImageView
                android:src="@drawable/red_1"
                android:id="@+id/image2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/roll"
            android:text="@string/roll"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dices"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:backgroundTint="#FFFFFF"
            />

        <Button
            android:id="@+id/colorbutton"
            android:text="@string/color"
            android:backgroundTint="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>